# hotel_room_booking_app

./: .env.example  .flake8  .gitignore  README.md  manage.py  pyproject.toml
core/account/: admin.py  models.py  urls.py  views.py
core/account/migrations/: 0001_initial.py  0002_alter_user_name.py
core/rooms/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
core/rooms/migrations/: 0001_initial.py  0002_remove_room_places_1_to_32_room_places_1_to_32.py  0003_remove_room_price_gte_0_room_price_gte_0.py  0004_booking_room_bookings.py  0005_alter_booking_room_alter_booking_status_and_more.py  0006_booking_unique_booking.py  0007_remove_booking_unique_booking_and_more.py
main/: settings.py  urls.py  views.py
tests/: conftest.py
tests/account/: test_log_in.py  test_register.py
tests/rooms/: conftest.py  test_admin_room_add_delete.py  test_room_view_and_booking.py
